XIVY-18650 close spans correctly on error